Fix horizontal scroll and captcha on mobile, host for user id

--- a/app/assets/stylesheets/registration.scss
+++ b/app/assets/stylesheets/registration.scss
@@ -2,9 +2,9 @@
   // For the mobile version which doesn't have the same global CSS
   background: $body-bg;
 
-  #app {
-    margin: -10px;
-    margin-bottom: 10px;
+  #main {
+    padding: 0;
+    padding-top: 46px;
   }
   // End specific mobile
 
